@@ -6,7 +6,7 @@ import org.xi.maple.common.util.JsonUtils;
 
 import java.io.Serializable;
 import java.time.LocalDateTime;
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.Map;
 
 @Data
@@ -68,6 +68,6 @@ public class DatasourceItemResp implements Serializable {
     private LocalDateTime updatedAt;
 
     public Map<String, Object> getDatasourceConf() {
-        return (Map<String, Object>) JsonUtils.parseObject(datasourceConf, Map.class, Map.of());
+        return (Map<String, Object>) JsonUtils.parseObject(datasourceConf, Map.class, Collections.emptyMap());
     }
 }
